--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@ return check;
 
    initGDApi(); // in order to initialize api
 	</script>
+	<script src="js/analytics_ubg_v1_4.js"></script>
+	<script src="js/ubg235_client_v1_1.js"></script>
 
 
 
